# reporting-app-back

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  backend-changes-required.md  build.sh  docker-compose.yml  filtering-frontend-requirement.md  frontend-api-changes.md  main.py  pyproject.toml  pytest.ini  reporting-backend.service  tech-debt.md
.github/workflows/: deploy-develop.yml  deploy-production.yml
data/crypto_trading/backtests/: adx_12h_2025-12-09_20-18-24.json  adx_1h_2025-12-09_20-04-12.json  adx_4h_2025-12-09_20-08-05.json  adx_8h_2025-12-09_20-14-42.json  bollinger_12h_2025-12-09_20-18-48.json  bollinger_1h_2025-12-09_20-03-01.json  bollinger_4h_2025-12-09_20-08-42.json  bollinger_4h_2025-12-09_20-23-46.json  bollinger_4h_2025-12-09_20-26-18.json  bollinger_4h_2025-12-09_20-35-44.json  bollinger_4h_2025-12-09_21-16-03.json  bollinger_8h_2025-12-09_20-15-11.json  macd_12h_2025-12-09_20-19-18.json  macd_1h_2025-12-09_20-02-17.json  macd_1h_2025-12-09_21-12-30.json  macd_4h_2025-12-09_20-09-36.json  macd_8h_2025-12-09_20-15-53.json  rsi_12h_2025-12-09_20-19-45.json  rsi_1h_2025-12-09_20-06-13.json  rsi_4h_2025-12-09_20-10-02.json  rsi_8h_2025-12-09_20-16-19.json  sma_crossover_12h_2025-12-09_20-20-33.json  sma_crossover_1h_2025-12-09_20-06-49.json  sma_crossover_1h_2025-12-09_21-12-39.json  sma_crossover_4h_2025-12-09_20-10-35.json  sma_crossover_8h_2025-12-09_20-17-22.json  stochastic_12h_2025-12-09_20-20-59.json  stochastic_1h_2025-12-09_20-05-14.json  stochastic_4h_2025-12-09_20-11-07.json  (+1 more)
docs/: GCP_COMMANDS.md
migrations/: env.py
migrations/versions/: 01a0880e26c4_remove_progress_column_from_reporting_.py  03f1653e4ef0_add_multi_currency_support_and_enhanced_.py  0f015d837733_add_anthropic_file_id_to_files_table.py  1178c10e0997_rename_tables_to_use_reporting__prefix.py  274b8a8d57de_remove_department_field_from_files_table.py  2d5a970729aa_remove_unused_columns_from_reporting_.py  2db3a104b7cf_add_realized_gain_columns.py  302141b07324_add_real_estate_return_columns.py  314289aeaa3b_simplify_result_model_for_chart_js_.py  435b7602e996_add_input_tokens_and_output_tokens_to_.py  564b16cc6bcd_initial_migration_with_auth_and_app_.py  6383cc244e68_remove_is_primary_column_from_results_.py  801adf5bfe88_initial_migration_with_uuid_primary_keys.py  8fa5592472a7_remove_unused_fields_from_files_table.py  9d0621f8a4b9_consolidate_reporting_modules_into_.py  aca783b90238_remove_agent_type_column_from_reporting_.py  afb17921c4ce_update_portfolio_schema_renames_and_new_.py  b5c8a2d1e3f4_remove_estimated_net_asset_value_columns.py  e47ac02c7b04_add_portfolio_tables_3_essential_tables_.py  f0645e90f0b4_remove_redundant_return_columns_from_.py  f1fa81978765_add_password_hash_field_to_users_table.py  f896f491baa8_rename_tables_for_module_decoupling.py  fcfab0cba93d_add_portfolio_reports_table.py
scripts/: README.md  __init__.py  build_scripts.py  check_db_connection.py  check_env_vars.py  migrate_portfolio_data.py  migrate_portfolio_data_dev.py
src/: api.py  config.py  exceptions.py  logging.py  main.py  rate_limiter.py
src/analysis/: controller.py  models.py  schemas.py
src/auth/: controller.py  dependencies.py  models.py  service.py
src/core/: api.py  config.py  exceptions.py  logging.py  rate_limiter.py
src/database/: core.py
src/decorators/: __init__.py  logging.py
src/entities/: __init__.py  analysis.py  auth.py  file.py  result.py  user.py
src/files/: controller.py  models.py  schemas.py
src/middleware/: __init__.py  logging.py
src/results/: controller.py  models.py  schemas.py
tests/: conftest.py  test_api.py  test_auth.py  test_decorators.py
(+254 files in other folders)
